<resources>
    <string name="app_name">Transnature</string>
    <string name="google_maps_api_key">AIzaSyDsh_60HIMuaeJ47AFrZfsZ3gUPzG-BbHk</string>

    <!-- Trail item -->
    <string name="desc_trail_img">Trail image</string>
    <string name="desc_save_icon">Save icon</string>

    <!-- Splash fragment -->
    <string name="desc_splash_img">Welcome to Treyl</string>

    <!-- Onboarding fragment -->
    <string name="head_onboarding">Oh hey!</string>
    <string name="sub_head_onboarding">One last step to get started</string>

    <!-- Feed fragment -->
    <string name="head_home">Home</string>

    <!-- Tracking fragment -->
    <string name="title_starting_point">Starting point</string>
    <string name="title_ending_point">Ending point</string>
    <string name="txt_session_saved">Yaay! We saved the session</string>
    <string name="txt_timer">00:00:00:00</string>
    <string name="btn_finish">Finish</string>
    <string name="btn_pause">Pause</string>
    <string name="btn_resume">Resume</string>

    <!-- Sessions fragment -->
    <string name="alert_title">Reset sessions</string>
    <string name="alert_subtitle">Are you sure to reset sessions?</string>
    <string name="alert_pos_button">Yes</string>
    <string name="alert_neg_button">Cancel</string>
    <string name="txt_sessions_empty">Oops, sessions are empty</string>

    <!-- Bottom nav menu  -->
    <string name="title_menu_feed">Feed</string>
    <string name="title_menu_fav">Favorites</string>
    <string name="title_menu_insights">Insights</string>
    <string name="title_menu_profile">Profile</string>

    <!-- Feed info fragment -->
    <string name="txt_distance_desc">Distanța de traseu</string>
    <string name="txt_duration_desc">Durata până la finalizare</string>
    <string name="txt_difficulty_desc">Nivel de dificultate</string>
    <string name="txt_peak_point">Punctul de vârf</string>
    <string name="txt_about_trail">Despre traseu</string>
    <string name="txt_accession_trail">Acces</string>
    <string name="txt_warnings_trail">Atenționări</string>
    <string name="action_settings">Settings action</string>
    <string name="action_favorite">Action favorite</string>
    <string name="txt_trail_saved">Yaay! We added the trail to fav list</string>
    <string name="txt_trail_removed">We removed the trail from fav list</string>

    <!-- Onboarding fragment -->
    <string name="hint_name">What you want to be called?</string>
    <string name="hint_height">Your height (cm.)</string>
    <string name="hint_weight">Your weight (kg.)</string>
    <string name="btn_start">Let\'s get started</string>
    <string name="err_empty_field">Oops, this field couldn\'t be empty</string>

    <!-- Profile fragment -->
    <string name="txt_user_details">User details</string>
    <string name="txt_user_details_edit">Edit user details</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_save">Save</string>

</resources>