<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/feedFragment"
        android:enabled="true"
        android:icon="@drawable/ic_home_24dp"
        android:title="@string/title_menu_feed" />
    <item
        android:id="@+id/searchFragment"
        android:enabled="true"
        android:icon="@drawable/ic_save_24dp"
        android:title="@string/title_menu_fav" />
    <item
        android:id="@+id/pingFragment"
        android:enabled="true"
        android:icon="@drawable/ic_statistics_24dp"
        android:title="@string/title_menu_history" />
    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_profile_24dp"
        android:title="@string/title_menu_profile" />
</menu>