<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_56_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.56" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_img_refs"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="56dp"
            android:contentDescription="@string/desc_trail_img"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/indicators"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textSize="@dimen/subtitle_sixteen"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vp_img_refs"
            tools:text="Traseul de vizitare Cascada Bulbuci" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_icon_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_distance_20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <TextView
            android:id="@+id/tv_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_icon_distance"
            app:layout_constraintStart_toEndOf="@+id/iv_icon_distance"
            app:layout_constraintTop_toTopOf="@+id/iv_icon_distance"
            tools:text="2.73 km distance" />

        <TextView
            android:id="@+id/tv_distance_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_distance_desc"
            android:textColor="@color/goodGray"
            app:layout_constraintStart_toStartOf="@+id/tv_distance"
            app:layout_constraintTop_toBottomOf="@id/tv_distance" />

        <TextView
            android:id="@+id/tv_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/iv_icon_duration"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            tools:text="44 minutes" />

        <TextView
            android:id="@+id/tv_duration_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/txt_duration_desc"
            android:textColor="@color/goodGray"
            app:layout_constraintStart_toStartOf="@+id/tv_duration"
            app:layout_constraintTop_toBottomOf="@id/tv_duration" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_icon_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_duration_20dp"
            app:layout_constraintStart_toEndOf="@+id/guideline_56_vertical"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <TextView
            android:id="@+id/tv_peak_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_icon_location"
            app:layout_constraintStart_toEndOf="@+id/iv_icon_location"
            app:layout_constraintTop_toTopOf="@+id/iv_icon_location"
            tools:text="2.3 km" />

        <TextView
            android:id="@+id/tv_peak_point_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_peak_point"
            android:textColor="@color/goodGray"
            app:layout_constraintStart_toStartOf="@+id/tv_peak_point"
            app:layout_constraintTop_toBottomOf="@id/tv_peak_point" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_icon_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_peak_point_20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_distance_desc" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_icon_difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_difficulty_20dp"
            app:layout_constraintStart_toEndOf="@+id/guideline_56_vertical"
            app:layout_constraintTop_toBottomOf="@id/tv_duration_desc" />

        <TextView
            android:id="@+id/tv_difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_icon_difficulty"
            app:layout_constraintStart_toEndOf="@+id/iv_icon_difficulty"
            app:layout_constraintTop_toTopOf="@+id/iv_icon_difficulty"
            tools:text="Medium" />

        <TextView
            android:id="@+id/tv_difficulty_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_difficulty_desc"
            android:textColor="@color/goodGray"
            app:layout_constraintStart_toStartOf="@+id/tv_difficulty"
            app:layout_constraintTop_toBottomOf="@id/tv_difficulty" />

        <View
            android:id="@+id/view_line_1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/goodGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_peak_point_desc" />

        <TextView
            android:id="@+id/tv_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/txt_about_trail"
            android:textSize="@dimen/subtitle_sixteen"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_line_1" />

        <TextView
            android:id="@+id/tv_about_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/goodGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_about"
            tools:text="Hello friends! This weekend I will be eating pizza at home." />

        <View
            android:id="@+id/view_line_2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/goodGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_about_content" />

        <TextView
            android:id="@+id/tv_accession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/txt_accession_trail"
            android:textSize="@dimen/subtitle_sixteen"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_line_2" />

        <TextView
            android:id="@+id/tv_accession_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/goodGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_accession"
            tools:text="Hello friends! This weekend I will be eating pizza at home." />

        <View
            android:id="@+id/view_line_3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/goodGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_accession_content" />

        <TextView
            android:id="@+id/tv_warnings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/txt_warnings_trail"
            android:textSize="@dimen/subtitle_sixteen"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_line_3" />

        <TextView
            android:id="@+id/tv_warnings_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/goodGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_warnings"
            tools:text="Hello friends! This weekend I will be eating pizza at home." />

        <View
            android:id="@+id/view_line_4"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/goodGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_warnings_content" />

<!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--            android:id="@+id/fab_navigate"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:layout_marginEnd="8dp"-->
<!--            app:fabSize="mini"-->
<!--            android:backgroundTint="@color/color_secondary"-->
<!--            android:contentDescription="@string/app_name"-->
<!--            android:src="@drawable/ic_navigate_32dp"-->
<!--            app:borderWidth="0dp"-->
<!--            app:elevation="24dp"-->
<!--            app:layout_constraintTop_toBottomOf="@id/vp_img_refs"-->
<!--            app:layout_constraintEnd_toEndOf="parent" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>